tests/snapshots/cli__noseyparker_github_repos_list_badtoken-3.snap
---
source: tests/cli.rs
expression: stderr
---
Error: error making request: HTTP status client error (401 Unauthorized) for url (https://api.github.com/rate_limit)

Caused by:
    HTTP status client error (401 Unauthorized) for url (https://api.github.com/rate_limit)

