tests/snapshots/cli__noseyparker_help_github-2.snap
---
source: tests/cli.rs
expression: stdout
---
Interact with GitHub

By default, unauthenticated access is used. An optional personal access token can be specified using
the `NP_GITHUB_TOKEN` environment variable. Using a personal access token gives higher rate limits
and may make additional content accessible.

Usage: noseyparker github [OPTIONS] <COMMAND>

Commands:
  repos
          Interact with GitHub repositories
  help
          Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -v, --verbose...
          Enable verbose output
          
          This can be repeated up to 3 times to enable successively more output.

      --color <MODE>
          Enable or disable colored output
          
          When this is "auto", colors are enabled when stdout is a tty.
          
          If the `NO_COLOR` environment variable is set, it takes precedence and is equivalent to
          `--color=never`.
          
          [default: auto]
          [possible values: auto, never, always]

      --progress <MODE>
          Enable or disable progress bars
          
          When this is "auto", progress bars are enabled when stderr is a tty.
          
          [default: auto]
          [possible values: auto, never, always]

