tests/snapshots/cli__noseyparker_scan_secrets1-2.snap
---
source: tests/cli.rs
expression: stdout
---

 Rule          Distinct Matches   Total Matches 
────────────────────────────────────────────────
 AWS API Key                  1               1 

