tests/snapshots/cli__noseyparker_scan_secrets1-5.snap
---
source: tests/cli.rs
expression: stdout
---
Finding 1/1: AWS API Key
Match: AKIADEADBEEFDEADBEEF

    Occurrence 1/1
    File:  <FILENAME>
    Lines: 3:9-3:28

        # This is fake configuration data
        USERNAME=the_dude
        AWS_KEY=AKIADEADBEEFDEADBEEF




