tests/snapshots/cli__noseyparker_scan_secrets1-7.snap
---
source: tests/cli.rs
expression: json_output
---
[
  {
    "match_content": "AKIADEADBEEFDEADBEEF",
    "matches": [
      {
        "blob_id": "7980f2571d9c04d65eb338f65f21edbff4469a11",
        "capture_group_index": 1,
        "location": {
          "offset_span": {
            "end": 80,
            "start": 60
          },
          "source_span": {
            "end": {
              "column": 28,
              "line": 3
            },
            "start": {
              "column": 9,
              "line": 3
            }
          }
        },
        "match_content": "AKIADEADBEEFDEADBEEF",
        "provenance": {
          "kind": "file",
          "path": "<ROOT>/input.txt"
        },
        "rule_name": "AWS API Key",
        "snippet": {
          "after": "\n",
          "before": "# This is fake configuration data\nUSERNAME=the_dude\nAWS_KEY=",
          "matching": "AKIADEADBEEFDEADBEEF"
        }
      }
    ],
    "num_matches": 1,
    "rule_name": "AWS API Key"
  }
]
